<resources>
    <string name="app_name">Reserve It</string>
    <string name="Reservations">Reservations</string>
    <string name="Events">Events</string>
    <string name="Travels">Travels</string>
    <string name="AddR">Add</string>
    <string name="ViewR">View</string>
    <string name="updateR">Update</string>
    <string name="IdR">ID</string>
    <string name="DeleteR">Delete</string>
    <string name="SaveR">Save</string>


    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>

    <string name="Mobile">Mobile</string>
    <string name="CheckIn">Check In</string>
    <string name="CheckOut">Check Out</string>


    <string name="name">Customer Name</string>
    <string name="card_name">Card Name</string>
    <string name="hours">Hours</string>
    <string name="price">Price</string>
    <string name="offer">Offer</string>
    <string name="add_package">Add Package</string>
    <string name="select_package">Select Package</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="reserve">Reserve</string>
    <string name="edit_package">Edit Package</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="hotel_refresh_home">Hotel Refresh Home</string>
    <string name="customer_home">Customer Home</string>
    <string name="admin_home">Admin Home</string>
    <string name="venues">VENUES</string>
    <string name="enter_customer_id">Enter Customer ID</string>
    <string name="Help">Help</string>
    <string name="todo">TODO</string>
    <string name="load_customer">Load Customer</string>


</resources>
